# ocelot-wallet

./: .env.example  .gitignore  .npmrc  BUILD.md  LICENSE  README.md  SECURITY.md  install-local.sh  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-macos.yml  release-source.yml  release.yml
.izumi/: project.yaml
.izumi/issues/: TEMPLATE.md
.izumi/issues/open/: add_get_zei_button_for_free_zei.md  add_info_page_or_faq.md  binary_signing.md  build_attestation.md  cert_pinning.md  request_signing.md  tauri_updater.md  wallet_user_agent_header.md
data/: wallet-cache.db  wallet-cache.db-shm  wallet-cache.db-wal
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: address.rs  api.rs  commands.rs  crypto.rs  hd.rs  lib.rs  main.rs  wallet.rs  zeicoin_bip39.rs  zeicoin_hd.rs
src-tauri/tests/: wallet_tests.rs
src/lib/: index.ts  utils.ts
src/lib/components/: app-sidebar.svelte  login-form.svelte  mnemonic-input.svelte  nav-main.svelte  nav-quick-actions.svelte  nav-user.svelte  ocelot-logo.svelte  singularity.svelte  theme-switcher.svelte  wallet-switcher.svelte
src/lib/config/: env.ts  server-config.ts  wallet-config.ts  wallets.ts
src/lib/hooks/: is-mobile.svelte.ts
src/lib/server/: database.ts  sqlite-cache.ts  sqlite-schema.sql  sync-service.ts
src/lib/services/: database.ts  mcp-events.ts  mcp-utils.ts  tauri-wallet-api.test.ts  tauri-wallet-api.ts  wallet-discovery.ts  wallet-registration.ts
src/lib/stores/: address-book.ts  auth.test.ts  auth.ts  server-config.ts  theme.ts  wallet-creation.ts
src/lib/types/: window.d.ts
src/lib/utils/: route-guards.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/info/: +page.svelte
src/routes/login/: +page.svelte
src/routes/login-02/: +page.svelte
src/routes/messages/: +page.svelte
src/routes/pro/: +page.svelte
src/routes/settings/: +page.svelte
static/: robots.txt
(+151 files in other folders)
