# SPDX-FileCopyrightText: 2025-2026 Ryo Zen (https://github.com/ryo-zen)
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "ocelot_wallet"
version = "0.1.0"
description = "Ocelot Wallet - ZeiCoin Non-Custodial Wallet"
authors = ["Ryo"]
license = "MIT"
repository = "https://github.com/ryo-zen/ocelot-wallet"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []  # Disabled MCP for Windows builds
mcp = []  # Define the feature but don't include any dependencies

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-opener = "2.5.3"
# tauri-plugin-mcp = { path = "../../tauri-plugin-mcp", optional = true }  # Disabled for Windows builds

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography - Matching Zig implementation
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
bip39 = { version = "2.0", features = ["rand"] }
blake3 = "1.5"  # ZeiCoin uses BLAKE3 instead of SHA256/SHA512
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
getrandom = "0.2"
zeroize = { version = "1.8", features = ["derive"] }

# HD Wallet support (BIP32/BIP44)
# Note: bip32 is for secp256k1, we'll use hmac/sha2 for ed25519 derivation
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Bech32 address encoding
bech32 = "0.11"

# HTTP client for transaction API
# Using rustls-tls for cross-platform TLS support (handles self-signed certs on macOS)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# File system
dirs = "5.0"

# Logging
log = "0.4"

# Date/time for backup timestamps
chrono = "0.4"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"
